# generative-artifact-protocol

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  apply.go  apply_test.go  doc.go  go.mod  go.sum  justfile  llms.txt  markers.go  markers_test.go  pyproject.toml  sr.yaml  store.go  store_test.go  types.go
apps/cli/: pyproject.toml
apps/eval/: Cargo.toml  STEELMAN.md
apps/eval/src/: checks.rs  client.rs  cost.rs  experiment.rs  main.rs  payload.rs  report.rs  runner.rs  scorer.rs
evals/: pyproject.toml  results.md
evals/data/: aap-spec-init.md  prompts.json
evals/data/apply-engine/0002/: metadata.yml  prompt.md
evals/data/apply-engine/0003/: metadata.yml  prompt.md
evals/data/apply-engine/0004/: prompt.md
evals/data/apply-engine/0005/: metadata.yml  prompt.md
evals/data/apply-engine/0006/: metadata.yml  prompt.md
evals/data/apply-engine/0007/: prompt.md
evals/data/apply-engine/0008/: metadata.yml  prompt.md
evals/data/apply-engine/0009/: metadata.yml  prompt.md
evals/data/apply-engine/0010/: prompt.md
evals/data/apply-engine/0011/: prompt.md
evals/data/apply-engine/0012/: prompt.md
evals/data/apply-engine/0016/: prompt.md
evals/data/apply-engine/0018/: metadata.yml  prompt.md
evals/data/apply-engine/0021/: prompt.md
evals/data/apply-engine/0022/: prompt.md
evals/data/experiments/: EXPERIMENT.md
evals/data/experiments/001-html-dashboard-ecommerce/: README.md  metrics.json
evals/data/experiments/002-html-dashboard-analytics/: README.md  metrics.json
evals/data/experiments/003-html-landing-saas/: README.md  metrics.json
evals/data/experiments/004-html-email-receipt/: README.md  metrics.json
evals/data/experiments/005-html-form-wizard/: README.md  metrics.json
evals/data/experiments/006-html-portfolio/: README.md  metrics.json
evals/data/experiments/007-html-blog-post/: README.md  metrics.json
evals/data/experiments/008-html-admin-users/: README.md  metrics.json
evals/data/experiments/009-html-invoice/: README.md  metrics.json
evals/data/experiments/010-html-kanban/: README.md  metrics.json
evals/data/experiments/011-python-fastapi-users/: README.md  metrics.json
evals/data/experiments/012-python-cli-log-analyzer/: README.md  metrics.json
evals/data/experiments/013-python-data-pipeline/: README.md  metrics.json
evals/data/experiments/014-python-pytest-suite/: README.md  metrics.json
evals/data/experiments/015-python-dataclasses-models/: README.md  metrics.json
evals/data/experiments/016-python-websocket-chat/: README.md  metrics.json
evals/data/experiments/017-python-scraper/: README.md  metrics.json
evals/data/experiments/018-js-react-data-table/: README.md  metrics.json
evals/data/experiments/019-js-express-api/: README.md  metrics.json
evals/data/experiments/020-ts-react-form/: README.md  metrics.json
evals/data/experiments/021-js-utility-library/: README.md  metrics.json
evals/data/experiments/022-ts-state-store/: README.md  metrics.json
evals/data/experiments/023-json-openapi-spec/: README.md  metrics.json
evals/data/experiments/024-json-package-monorepo/: README.md  metrics.json
evals/data/experiments/025-json-tsconfig/: README.md  metrics.json
evals/data/experiments/026-json-api-response-users/: README.md
evals/data/experiments/027-json-i18n-translations/: README.md  metrics.json
evals/data/experiments/028-json-geojson-cities/: README.md
evals/data/experiments/029-yaml-docker-compose-microservices/: README.md  metrics.json
evals/data/experiments/030-yaml-github-actions-ci/: README.md  metrics.json
evals/data/experiments/031-yaml-k8s-deployment/: README.md
evals/data/experiments/032-yaml-ansible-playbook/: README.md
evals/data/experiments/033-yaml-cloudformation/: README.md
evals/data/experiments/034-md-readme-cli/: README.md
evals/data/experiments/035-md-api-docs/: README.md
evals/data/experiments/036-md-changelog/: README.md
evals/data/experiments/037-md-tutorial/: README.md
evals/data/experiments/038-md-adr/: README.md
evals/data/experiments/039-css-design-system/: README.md
evals/data/experiments/040-css-animations/: README.md
evals/data/experiments/041-rust-cli-file-processor/: README.md
evals/data/experiments/042-rust-http-client/: README.md  metrics.json
evals/data/experiments/043-rust-data-structures/: README.md
evals/data/experiments/044-go-http-server/: README.md
evals/data/experiments/045-go-worker-pool/: README.md  metrics.json
evals/data/experiments/046-shell-deploy-script/: README.md
evals/data/experiments/047-shell-setup-dev/: README.md  metrics.json
evals/data/experiments/048-svg-bar-chart/: README.md
evals/data/experiments/049-svg-dashboard-icons/: README.md
evals/data/experiments/050-svg-architecture-diagram/: README.md  metrics.json
evals/data/experiments/051-toml-cargo-workspace/: README.md
evals/data/experiments/052-toml-pyproject/: README.md
evals/data/experiments/053-xml-maven-pom/: README.md
evals/data/experiments/054-xml-rss-feed/: README.md
evals/data/experiments/055-java-spring-controller/: README.md
evals/data/experiments/056-ruby-rails-model/: README.md
evals/data/experiments/057-sql-schema-ecommerce/: README.md  metrics.json
evals/data/experiments/058-json-eslintrc/: README.md
evals/data/experiments/059-yaml-renovate/: README.md
evals/data/experiments/060-toml-rustfmt/: README.md
evals/data/experiments/061-yaml-pre-commit/: README.md
evals/data/experiments/062-shell-git-hooks/: README.md
evals/data/experiments/063-md-contributing/: README.md
evals/data/experiments/064-python-conftest/: README.md
evals/data/experiments/065-html-email-newsletter/: README.md
evals/data/experiments/066-python-fastapi-auth/: README.md
evals/src/aap_evals/: agents.py  apply.py  categories.py  cli.py  eval.py  flows.py  generate.py  markers.py  models.py  ollama.py  schema.py  tools.py  types.py
libs/core/: pyproject.toml
libs/evals/: pyproject.toml
libs/evals/data/: aap-spec-maintain.md  aap-spec.md  gap-spec.md  prompts.json
(+1947 files in other folders)
