[package]
name = "generative-artifact-protocol"
version = "0.12.0"
edition = "2021"
description = "Generative Artifact Protocol (GAP) — token-efficient artifact generation and updates for LLMs"
license = "Apache-2.0"
repository = "https://github.com/urmzd/agent-artifact-protocol"
homepage = "https://github.com/urmzd/agent-artifact-protocol"
readme = "README.md"
keywords = ["gap", "llm", "artifact", "apply-engine", "generative"]
categories = ["text-processing"]
exclude = [
  "apps/",
  "libs/",
  "spec/",
  "scripts/",
  ".github/",
  ".githooks/",
  "pyproject.toml",
  "uv.lock",
  ".python-version",
  "justfile",
  "sr.yaml",
  "target/",
]

[lib]
name = "gap"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow        = "1"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
regex         = "1"
sha2          = "0.10"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.29"
opentelemetry      = "0.28"
opentelemetry_sdk  = "0.28"
pyo3              = { version = "0.24", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "gap"
harness = false
