[workspace]
members = [".", "apps/eval"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package]
name = "generative-artifact-protocol"
version = "0.15.1"
edition = "2021"
description = "Generative Artifact Protocol (GAP) — token-efficient artifact generation and updates for LLMs"
license = "Apache-2.0"
repository = "https://github.com/urmzd/generative-artifact-protocol"
homepage = "https://github.com/urmzd/generative-artifact-protocol"
readme = "README.md"
keywords = ["gap", "llm", "artifact", "apply-engine", "generative"]
categories = ["text-processing"]
exclude = [
  "apps/",
  "assets/",
  "spec/",
  "scripts/",
  ".github/",
  ".githooks/",
  "justfile",
  "sr.yaml",
  "target/",
]

[lib]
name = "gap"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
sha2 = "0.10"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry = "0.29"
opentelemetry = "0.28"
opentelemetry_sdk = "0.28"

[features]
default = []

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "gap"
harness = false
