[project]
name = "gap-core"
version = "0.12.0"
description = "GAP apply-engine — Rust/PyO3 bindings"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["maturin>=1.8"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "../../Cargo.toml"
features = ["python"]
module-name = "gap.core._gap"
python-source = "src"
